# excel-mcp-server-stripped

./: .gitignore  README.md  TOOLS.md  excel-mcp-server-stripped.spec  manifest.json  pyproject.toml
.github/workflows/: publish.yml
scripts/: build-exe.ps1  release-github.ps1
src/excel_mcp/: __main__.py  data.py  server.py
