[project]
name = "excel-mcp-server-stripped"
version = "0.1.9"
description = "Excel MCP Server for manipulating Excel files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
    "typer>=0.16.0"
]
[[project.authors]]
name = "Paul Ivascu"
email = "paul.ivascu@inatech.eu"

[project.urls]
Homepage = "https://github.com/paulivascu/excel-mcp-server-stripped"
Repository = "https://github.com/paulivascu/excel-mcp-server-stripped"
Issues = "https://github.com/paulivascu/excel-mcp-server-stripped/issues"

[project.scripts]
excel-mcp-server = "excel_mcp.__main__:app"
excel-mcp-server-stripped = "excel_mcp.__main__:app"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
